--- a/4-BOLUM/CALISMALAR/MVC-Project1/Views/Home/Index.cshtml
+++ b/4-BOLUM/CALISMALAR/MVC-Project1/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="flex flex-col gap-4 mx-auto my-auto text-center">
+<div class="flex flex-col items-center justify-center min-h-[calc(100vh-100px)] gap-4 mx-auto my-auto text-center">
     <h1>Welcome</h1>
     @if (Model.IsLoggedIn)
     {
