--- a/4-BOLUM/CALISMALAR/MVC-Project1/Views/Auth/SignIn.cshtml
+++ b/4-BOLUM/CALISMALAR/MVC-Project1/Views/Auth/SignIn.cshtml
@@ -1,5 +1,5 @@
 @model VM.Login
-<div class="flex flex-col items-center justify-center gap-5">
+<div class="flex flex-col items-center justify-center min-h-[calc(100vh-100px)] gap-5 mx-auto my-auto text-center">
 
     <h1>Sign-In</h1>
 
