--- a/4-BOLUM/CALISMALAR/MVC-Project1/Views/Shared/_Layout.cshtml
+++ b/4-BOLUM/CALISMALAR/MVC-Project1/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav class="p-3 text-center bg-darkNavy">
+        <nav class="sticky top-0 z-10 p-4 text-center bg-darkNavy">
             <div class="flex justify-between max-w-6xl mx-auto">
                 <div class="flex gap-3">
                     <a class="py-2 text-center duration-200 w-44 bg-navyBlue text-aqua rounded-xl hover:bg-skyBlue hover:text-darkNavy"
@@ -36,7 +36,8 @@
         </nav>
     </header>
 
-    <main role="main" class="flex flex-col justify-center items-center min-h-[calc(100vh-100px)]">
+    @* flex flex-col justify-center items-center  *@
+    <main role="main" class="min-h-[calc(100vh-100px)]">
         @RenderBody()
     </main>
 
