--- a/4-BOLUM/CALISMALAR/MVC-Dropdown-Tekrar/Views/Home/Sevgi.cshtml
+++ b/4-BOLUM/CALISMALAR/MVC-Dropdown-Tekrar/Views/Home/Sevgi.cshtml
@@ -15,3 +15,5 @@
     atque a aliquid id vel cumque quas nobis repudiandae. Molestias cum nam consectetur accusamus?</p>
 <img src="https://www.olusumhaber.com/images/makaleler/2022/12/guclu-bir-iliski-icin-ilk-adim-sevgi-haritasi-3559.webp"
     alt="Sevgi">
+
+<a href="/Home/Test">Testi Coz</a>
